chore: update doc comments

--- a/packages/core/scss/styles/_accessibility.scss
+++ b/packages/core/scss/styles/_accessibility.scss
@@ -1,5 +1,5 @@
-/// @name k-sr-only
-/// @description This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
+/// This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
+/// @name .k-sr-only
 /// @group accessibility
 .k-sr-only {
     position: absolute;
