--- a/packages/fluent/scss/core/helpers/_extra.scss
+++ b/packages/fluent/scss/core/helpers/_extra.scss
@@ -10,8 +10,8 @@
 }
 
 
-/// @name k-sr-only
-/// @description This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
+/// This class could be assigned to elements which should be visually hidden, but remain accessible for screen readers.
+/// @name. k-sr-only
 /// @group extra
 .k-sr-only {
     position: absolute;
