--- a/packages/utils/scss/interactivity/_resize.scss
+++ b/packages/utils/scss/interactivity/_resize.scss
@@ -1,19 +1,24 @@
+/// This is equivalent to `resize: both;`. The element displays a mechanism for allowing the user to resize it, which may be resized both horizontally and vertically.
 /// @name .k-resize
-/// @description This is equivalent to `resize: both;`. The element displays a mechanism for allowing the user to resize it, which may be resized both horizontally and vertically.
 /// @group resize
+/// @contextType css
 
+/// This is equivalent to `resize: none;`. The element offers no user-controllable method for resizing it.
 /// @name .k-resize-none
-/// @description This is equivalent to `resize: none;`. The element offers no user-controllable method for resizing it.
 /// @group resize
+/// @contextType css
 
+/// This is equivalent to `resize: horizontal;`. The element displays a mechanism for allowing the user to resize it in the horizontal direction.
 /// @name .k-resize-x
-/// @description This is equivalent to `resize: horizontal;`. The element displays a mechanism for allowing the user to resize it in the horizontal direction.
 /// @group resize
+/// @contextType css
 
+/// This is equivalent to `resize: vertical;`. The element displays a mechanism for allowing the user to resize it in the vertical direction.
 /// @name .k-resize-y
-/// @description This is equivalent to `resize: vertical;`. The element displays a mechanism for allowing the user to resize it in the vertical direction.
 /// @group resize
+/// @contextType css
 
+// Resize utility classes
 $kendo-utils-resize: map-get( $kendo-utils, "resize" ) !default;
 
 @include generate-utils( resize, resize, $kendo-utils-resize );
