--- a/packages/default/scss/utils/_aspect-ratio.scss
+++ b/packages/default/scss/utils/_aspect-ratio.scss
@@ -2,14 +2,19 @@
 
     // Aspect-ratio documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/aspect-ratio.
 
-    // @name k-aspect-ratio-auto
-    // @description This is equivalent to `aspect-ratio: auto;`. Replaced elements with an intrinsic aspect ratio use that aspect ratio, otherwise the box has no preferred aspect ratio. Size calculations involving intrinsic aspect ratio always work with the content box dimensions.
-    // @group aspect-ratio
+    /// This is equivalent to `aspect-ratio: auto;`. Replaced elements with an intrinsic aspect ratio use that aspect ratio, otherwise the box has no preferred aspect ratio. Size calculations involving intrinsic aspect ratio always work with the content box dimensions.
+    /// @name .k-aspect-ratio-auto
+    /// @group aspect-ratio
+    /// @contextType css
+    _ {}
 
-    // @name k-aspect-ratio-1
-    // @description This is equivalent to `aspect-ratio: 1;`. The box's preferred aspect ratio is the specified ratio of 1. Size calculations involving preferred aspect ratio work with the dimensions of the box specified by box-sizing.
-    // @group aspect-ratio
+    /// This is equivalent to `aspect-ratio: 1;`. The box's preferred aspect ratio is the specified ratio of 1. Size calculations involving preferred aspect ratio work with the dimensions of the box specified by box-sizing.
+    /// @name .k-aspect-ratio-1
+    /// @group aspect-ratio
+    /// @contextType css
+    _ {}
 
+    // Aspect ratio utility classes
     $utils-aspect-ratio: (
         auto,
         1
