--- a/packages/default/scss/utils/_flex.scss
+++ b/packages/default/scss/utils/_flex.scss
@@ -4,43 +4,43 @@
 
     // Flex documentation sourced from https://css-tricks.com/almanac/properties/f/flex/.
 
-    /// @name k-d-flex
-    /// @description This is equivalent to `display: flex`. It defines a flex container and enables a flex context for all its direct children. Think of flex items as primarily laying out either in horizontal rows or vertical columns.
+    /// This is equivalent to `display: flex`. It defines a flex container and enables a flex context for all its direct children. Think of flex items as primarily laying out either in horizontal rows or vertical columns.
+    /// @name .k-d-flex
     /// @group flex-layout
     .k-d-flex                           { display: flex; }
     .\!k-d-flex                         { display: flex !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-d-inline-flex
-    /// @description This is equivalent to `display: inline-flex`. It defines a flex container and enables a flex context for all its direct children. Think of flex items as primarily laying out either in horizontal rows or vertical columns.
+    /// This is equivalent to `display: inline-flex`. It defines a flex container and enables a flex context for all its direct children. Think of flex items as primarily laying out either in horizontal rows or vertical columns.
+    /// @name .k-d-inline-flex
     /// @group flex-layout
     .k-d-inline-flex                    { display: inline-flex; }
     .\!k-d-inline-flex                  { display: inline-flex !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-d-flex-row
-    /// @description This is equivalent to `display: inline-flex` and `flex-direction: row`.
+    /// This is equivalent to `display: inline-flex` and `flex-direction: row`.
+    /// @name .k-d-flex-row
     /// @group flex-layout
     .k-d-flex-row                       { @extend .k-d-flex, .k-flex-row; }
     .\!k-d-flex-row                     { @extend .\!k-d-flex, .\!k-flex-row; } // sass-lint:disable-line class-name-format
-    /// @name k-d-flex-col
-    /// @description This is equivalent to `display: inline-flex` and `flex-direction: column`.
+    /// This is equivalent to `display: inline-flex` and `flex-direction: column`.
+    /// @name .k-d-flex-col
     /// @group flex-layout
     .k-d-flex-col                       { @extend .k-d-flex, .k-flex-col; }
     .\!k-d-flex-col                     { @extend .\!k-d-flex, .\!k-flex-row; } // sass-lint:disable-line class-name-format
-    /// @name k-flex-row
-    /// @description This is equivalent to `flex-direction: row`. This establishes the main-axis to be horizontal, thus defining the direction flex items are placed in the flex container: left to right in `ltr`; right to left in `rtl`.
+    /// This is equivalent to `flex-direction: row`. This establishes the main-axis to be horizontal, thus defining the direction flex items are placed in the flex container: left to right in `ltr`; right to left in `rtl`.
+    /// @name .k-flex-row
     /// @group flex-layout
     .k-flex-row                         { flex-direction: row; }
     .\!k-flex-row                       { flex-direction: row !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-row-reverse
-    /// @description This is equivalent to `flex-direction: row-reverse`. This establishes the main-axis to be horizontal, thus defining the direction flex items are placed in the flex container: right to left in `ltr`; left to right in `rtl`.
+    /// This is equivalent to `flex-direction: row-reverse`. This establishes the main-axis to be horizontal, thus defining the direction flex items are placed in the flex container: right to left in `ltr`; left to right in `rtl`.
+    /// @name .k-flex-row-reverse
     /// @group flex-layout
     .k-flex-row-reverse                 { flex-direction: row-reverse; }
     .\!k-flex-row-reverse               { flex-direction: row-reverse !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-col
-    /// @description This is equivalent to `flex-direction: column`. This establishes the main-axis to be vertical, thus defining the direction flex items are placed in the flex container: top to bottom.
+    /// This is equivalent to `flex-direction: column`. This establishes the main-axis to be vertical, thus defining the direction flex items are placed in the flex container: top to bottom.
+    /// @name .k-flex-col
     /// @group flex-layout
     .k-flex-col                         { flex-direction: column; }
     .\!k-flex-col                       { flex-direction: column !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-col-reverse
-    /// @description This is equivalent to `flex-direction: column-reverse`. This establishes the main-axis to be vertical, thus defining the direction flex items are placed in the flex container: bottom to top.
+    /// This is equivalent to `flex-direction: column-reverse`. This establishes the main-axis to be vertical, thus defining the direction flex items are placed in the flex container: bottom to top.
+    /// @name .k-flex-col-reverse
     /// @group flex-layout
     .k-flex-col-reverse                 { flex-direction: column-reverse; }
     .\!k-flex-col-reverse               { flex-direction: column-reverse !important; } // sass-lint:disable-line no-important class-name-format
@@ -53,18 +53,18 @@
 
     // Flex wrap
 
-    /// @name k-flex-wrap
-    /// @description This is equivalent to `flex-wrap: wrap`. It allows flex items to wrap as needed onto multiple lines, from top to bottom.
+    /// This is equivalent to `flex-wrap: wrap`. It allows flex items to wrap as needed onto multiple lines, from top to bottom.
+    /// @name .k-flex-wrap
     /// @group flex-layout
     .k-flex-wrap                        { flex-wrap: wrap; }
     .\!k-flex-wrap                      { flex-wrap: wrap !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-nowrap
-    /// @description This is equivalent to `flex-wrap: nowrap`. All flex items will be on one line.
+    /// This is equivalent to `flex-wrap: nowrap`. All flex items will be on one line.
+    /// @name .k-flex-nowrap
     /// @group flex-layout
     .k-flex-nowrap                      { flex-wrap: nowrap; }
     .\!k-flex-nowrap                    { flex-wrap: nowrap !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-wrap-reverse
-    /// @description This is equivalent to `flex-wrap: wrap-reverse`. It allows flex items to wrap as needed onto multiple lines, from bottom to top.
+    /// This is equivalent to `flex-wrap: wrap-reverse`. It allows flex items to wrap as needed onto multiple lines, from bottom to top.
+    /// @name .k-flex-wrap-reverse
     /// @group flex-layout
     .k-flex-wrap-reverse                { flex-wrap: wrap-reverse; }
     .\!k-flex-wrap-reverse              { flex-wrap: wrap-reverse !important; } // sass-lint:disable-line no-important class-name-format
@@ -72,53 +72,53 @@
 
     // Flex, shrink, grow,
 
-    /// @name k-flex-initial
-    /// @description This is the same as `flex: initial;` and the shorthand for the default value: `flex: 0 1 auto`. It sizes the item based on its `width`/`height` properties (or its content if not set). It makes the flex item inflexible when there is some free space left, but allows it to shrink to its minimum when there is not enough space. The alignment abilities or `auto` margins can be used to align flex items along the main axis.
+    /// This is the same as `flex: initial;` and the shorthand for the default value: `flex: 0 1 auto`. It sizes the item based on its `width`/`height` properties (or its content if not set). It makes the flex item inflexible when there is some free space left, but allows it to shrink to its minimum when there is not enough space. The alignment abilities or `auto` margins can be used to align flex items along the main axis.
+    /// @name .k-flex-initial
     /// @group flex-layout
     .k-flex-initial                     { flex: 0 1 auto; }
     .\!k-flex-initial                   { flex: 0 1 auto !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-1
-    /// @description This is equivalent to `flex: 1 1 0%`. It sizes the item not based on its `width`/`height` properties, but based on the available space. This is similar to `flex: 1 1 auto` execpt it is allowed to shrink beyond its initial size.
+    /// This is equivalent to `flex: 1 1 0%`. It sizes the item not based on its `width`/`height` properties, but based on the available space. This is similar to `flex: 1 1 auto` execpt it is allowed to shrink beyond its initial size.
+    /// @name .k-flex-1
     /// @group flex-layout
     .k-flex-1                           { flex: 1 1 0%; }
     .\!k-flex-1                         { flex: 1 1 0% !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-auto
-    /// @description This is equivalent to `flex: 1 1 auto`. Beware, this is not the default value. It sizes the item based on its `width`/`height` properties, but makes it fully flexible so that they absorb any extra space along the main axis. If all items are either `flex: auto`, `flex: initial`, or `flex: none`, any remaining space after the items have been sized will be distributed evenly to the items with `flex: auto`.
+    /// This is equivalent to `flex: 1 1 auto`. Beware, this is not the default value. It sizes the item based on its `width`/`height` properties, but makes it fully flexible so that they absorb any extra space along the main axis. If all items are either `flex: auto`, `flex: initial`, or `flex: none`, any remaining space after the items have been sized will be distributed evenly to the items with `flex: auto`.
+    /// @name .k-flex-auto
     /// @group flex-layout
     .k-flex-auto                        { flex: 1 1 auto; }
     .\!k-flex-auto                      { flex: 1 1 auto !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-none
-    /// @description This is equivalent to `flex: 0 0 auto`. It sizes the item according to its `width`/`height` properties, but makes it fully inflexible. This is similar to `flex: initial` except it is not allowed to shrink, even in an overflow situation.
+    /// This is equivalent to `flex: 0 0 auto`. It sizes the item according to its `width`/`height` properties, but makes it fully inflexible. This is similar to `flex: initial` except it is not allowed to shrink, even in an overflow situation.
+    /// @name .k-flex-none
     /// @group flex-layout
     .k-flex-none                        { flex: none; }
     .\!k-flex-none                      { flex: none !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-grow
-    /// @description This is equivalent to `flex-grow: 1`. It defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.
+    /// This is equivalent to `flex-grow: 1`. It defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.
+    /// @name .k-flex-grow
     /// @group flex-layout
     .k-flex-grow                        { flex-grow: 1; }
     .\!k-flex-grow                      { flex-grow: 1 !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-grow-0
-    /// @description This is equivalent to `flex-grow: 0`. The item will not grow.
+    /// This is equivalent to `flex-grow: 0`. The item will not grow.
+    /// @name .k-flex-grow-0
     /// @group flex-layout
     .k-flex-grow-0                      { flex-grow: 0; }
     .\!k-flex-grow-0                    { flex-grow: 0 !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-shrink
-    /// @description This is equivalent to `flex-shrink: 1`. It determines how much the flex item will shrink relative to the rest of the flex items in the flex container when there isn't enough space on the row.
+    /// This is equivalent to `flex-shrink: 1`. It determines how much the flex item will shrink relative to the rest of the flex items in the flex container when there isn't enough space on the row.
+    /// @name .k-flex-shrink
     /// @group flex-layout
     .k-flex-shrink                      { flex-shrink: 1; }
     .\!k-flex-shrink                    { flex-shrink: 1 !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-shrink-0
-    /// @description This is equivalent to `flex-shrink: 0`. The item will not shrink.
+    /// This is equivalent to `flex-shrink: 0`. The item will not shrink.
+    /// @name .k-flex-shrink-0
     /// @group flex-layout
     .k-flex-shrink-0                    { flex-shrink: 0; }
     .\!k-flex-shrink-0                  { flex-shrink: 0 !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-basis-auto
-    /// @description This is equivalent to `flex-basis: auto`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It sizes the element according to its size property.
+    /// This is equivalent to `flex-basis: auto`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It sizes the element according to its size property.
+    /// @name .k-flex-basis-auto
     /// @group flex-layout
     .k-flex-basis-auto                  { flex-basis: auto; }
     .\!k-flex-basis-auto                { flex-basis: auto !important; } // sass-lint:disable-line no-important class-name-format
-    /// @name k-flex-basis-0
-    /// @description This is equivalent to `flex-basis: 0`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It disregards the element' size property.
+    /// This is equivalent to `flex-basis: 0`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It disregards the element' size property.
+    /// @name .k-flex-basis-0
     /// @group flex-layout
     .k-flex-basis-0                     { flex-basis: 0%; }
     .\!k-flex-basis-0                   { flex-basis: 0% !important; } // sass-lint:disable-line no-important class-name-format
