--- a/packages/default/scss/utils/_float.scss
+++ b/packages/default/scss/utils/_float.scss
@@ -3,40 +3,56 @@
     // Float documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/float.
     // Clear documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/clear.
 
-    // @name k-float-left
-    // @description This is equivalent to `float: left;`. The element must float on the left side of its containing block.
-    // @group float
+    /// This is equivalent to `float: left;`. The element must float on the left side of its containing block.
+    /// @name .k-float-left
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-float-right
-    // @description This is equivalent to `float: right;`. The element must float on the right side of its containing block.
-    // @group float
+    /// This is equivalent to `float: right;`. The element must float on the right side of its containing block.
+    /// @name .k-float-right
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-float-none
-    // @description This is equivalent to `float: none;`. The element must not float.
-    // @group float
+    /// This is equivalent to `float: none;`. The element must not float.
+    /// @name .k-float-none
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-clear-left
-    // @description This is equivalent to `clear: left;`. Is a keyword indicating that the element is moved down to clear past left floats.
-    // @group float
+    /// This is equivalent to `clear: left;`. Is a keyword indicating that the element is moved down to clear past left floats.
+    /// @name .k-clear-left
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-clear-right
-    // @description This is equivalent to `clear: right;`. Is a keyword indicating that the element is moved down to clear past right floats.
-    // @group float
+    /// This is equivalent to `clear: right;`. Is a keyword indicating that the element is moved down to clear past right floats.
+    /// @name .k-clear-right
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-clear-both
-    // @description This is equivalent to `clear: both;`. Is a keyword indicating that the element is moved down to clear past both left and right floats.
-    // @group float
+    /// This is equivalent to `clear: both;`. Is a keyword indicating that the element is moved down to clear past both left and right floats.
+    /// @name .k-clear-both
+    /// @group float
+    /// @contextType css
+    _ {}
 
-    // @name k-clear-none
-    // @description This is equivalent to `clear: none;`. Is a keyword indicating that the element is not moved down to clear past floating elements.
-    // @group float
+    /// This is equivalent to `clear: none;`. Is a keyword indicating that the element is not moved down to clear past floating elements.
+    /// @name .k-clear-none
+    /// @group float
+    /// @contextType css
+    _ {}
 
+    // Float utility classes
     $utils-float: (
         left,
         right,
         none
     ) !default;
 
+    // Clear utility classes
     $utils-clear: (
         left,
         right,
