--- a/packages/default/scss/utils/_position.scss
+++ b/packages/default/scss/utils/_position.scss
@@ -2,25 +2,35 @@
 
     // Position documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/position.
 
-    /// @name k-pos-static
-    /// @description This is equivalent to `position: static;`. The element is positioned according to the normal flow of the document. The top, right, bottom, left, and z-index properties have no effect. This is the default value.
+    /// This is equivalent to `position: static;`. The element is positioned according to the normal flow of the document. The top, right, bottom, left, and z-index properties have no effect. This is the default value.
+    /// @name .k-pos-static
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-relative
-    /// @description This is equivalent to `position: relative;`. The element is positioned according to the normal flow of the document, and then offset relative to itself based on the values of top, right, bottom, and left. The offset does not affect the position of any other elements; thus, the space given for the element in the page layout is the same as if position were static.
+    /// This is equivalent to `position: relative;`. The element is positioned according to the normal flow of the document, and then offset relative to itself based on the values of top, right, bottom, and left. The offset does not affect the position of any other elements; thus, the space given for the element in the page layout is the same as if position were static.
+    /// @name .k-pos-relative
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-absolute
-    /// @description This is equivalent to `position: absolute;`. The element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to its closest positioned ancestor, if any; otherwise, it is placed relative to the initial containing block. Its final position is determined by the values of top, right, bottom, and left.
+    /// This is equivalent to `position: absolute;`. The element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to its closest positioned ancestor, if any; otherwise, it is placed relative to the initial containing block. Its final position is determined by the values of top, right, bottom, and left.
+    /// @name .k-pos-absolute
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-fixed
-    /// @description This is equivalent to `position: fixed;`. The element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to the initial containing block established by the viewport, except when one of its ancestors has a transform, perspective, or filter property set to something other than none (see the CSS Transforms Spec), in which case that ancestor behaves as the containing block. (Note that there are browser inconsistencies with perspective and filter contributing to containing block formation.) Its final position is determined by the values of top, right, bottom, and left.
+    /// This is equivalent to `position: fixed;`. The element is removed from the normal document flow, and no space is created for the element in the page layout. It is positioned relative to the initial containing block established by the viewport, except when one of its ancestors has a transform, perspective, or filter property set to something other than none (see the CSS Transforms Spec), in which case that ancestor behaves as the containing block. (Note that there are browser inconsistencies with perspective and filter contributing to containing block formation.) Its final position is determined by the values of top, right, bottom, and left.
+    /// @name .k-pos-fixed
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-sticky
-    /// @description This is equivalent to `position: sticky;`. The element is positioned according to the normal flow of the document, and then offset relative to its nearest scrolling ancestor and containing block (nearest block-level ancestor), including table-related elements, based on the values of top, right, bottom, and left. The offset does not affect the position of any other elements.
+    /// This is equivalent to `position: sticky;`. The element is positioned according to the normal flow of the document, and then offset relative to its nearest scrolling ancestor and containing block (nearest block-level ancestor), including table-related elements, based on the values of top, right, bottom, and left. The offset does not affect the position of any other elements.
+    /// @name .k-pos-sticky
     /// @group position
+    /// @contextType css
+    _ {}
 
     @each $pos in (static, relative, absolute, fixed, sticky) {
         .k-#{$pos},
@@ -30,30 +40,39 @@
         .\!k-pos-#{$pos} { position: $pos !important; } // sass-lint:disable-line brace-style no-important
     }
 
-    /// @name k-pos-top
-    /// @description This is equivalent to `top: 0;`.
+    /// This is equivalent to `top: 0;`.
+    /// @name .k-pos-top
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-right
-    /// @description This is equivalent to `right: 0;`.
+    /// This is equivalent to `right: 0;`.
+    /// @name .k-pos-right
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-bottom
-    /// @description This is equivalent to `bottom: 0;`.
+    /// This is equivalent to `bottom: 0;`.
+    /// @name .k-pos-bottom
     /// @group position
+    /// @contextType css
+    _ {}
 
-    /// @name k-pos-left
-    /// @description This is equivalent to `left: 0;`.
+    /// This is equivalent to `left: 0;`.
+    /// @name .k-pos-left
     /// @group position
+    /// @contextType css
+    _ {}
 
     @each $side in (top, right, bottom, left) {
         .k-#{$side},
         .k-pos-#{$side} { #{$side}: 0; } // sass-lint:disable-line brace-style
     }
 
-    /// @name k-pos-top-start
-    /// @description This is equivalent to `top: 0; left: 0;`.
+    /// This is equivalent to `top: 0; left: 0;`.
+    /// @name .k-pos-top-start
     /// @group position
+    /// @contextType css
     .k-top-start,
     .k-pos-top-start {
         top: 0;
@@ -67,9 +86,10 @@
         }
     }
 
-    /// @name k-pos-top-center
-    /// @description This is equivalent to `top: 0; left: 50%; transform: translateX(-50%);`.
+    /// This is equivalent to `top: 0; left: 50%; transform: translateX(-50%);`.
+    /// @name .k-pos-top-center
     /// @group position
+    /// @contextType css
     .k-top-center,
     .k-pos-top-center {
         top: 0;
@@ -77,9 +97,10 @@
         transform: translateX(-50%);
     }
 
-    /// @name k-pos-top-end
-    /// @description This is equivalent to `top: 0; right: 0;`.
+    /// This is equivalent to `top: 0; right: 0;`.
+    /// @name .k-pos-top-end
     /// @group position
+    /// @contextType css
     .k-top-end,
     .k-pos-top-end {
         top: 0;
@@ -93,9 +114,10 @@
         }
     }
 
-    /// @name k-pos-middle-start
-    /// @description This is equivalent to `top: 50%; left: 0; transform: translateY(-50%);`.
+    /// This is equivalent to `top: 50%; left: 0; transform: translateY(-50%);`.
+    /// @name .k-pos-middle-start
     /// @group position
+    /// @contextType css
     .k-middle-start,
     .k-pos-middle-start {
         top: 50%;
@@ -110,9 +132,10 @@
         }
     }
 
-    /// @name k-pos-middle-center
-    /// @description This is equivalent to `top: 50%; left: 50%; transform: translate(-50%, -50%);`.
+    /// This is equivalent to `top: 50%; left: 50%; transform: translate(-50%, -50%);`.
+    /// @name .k-pos-middle-center
     /// @group position
+    /// @contextType css
     .k-middle-center,
     .k-pos-middle-center {
         top: 50%;
@@ -120,9 +143,10 @@
         transform: translate(-50%, -50%);
     }
 
-    /// @name k-pos-middle-end
-    /// @description This is equivalent to `top: 50%; right: 0; transform: translateY(-50%);`.
+    /// This is equivalent to `top: 50%; right: 0; transform: translateY(-50%);`.
+    /// @name .k-pos-middle-end
     /// @group position
+    /// @contextType css
     .k-middle-end,
     .k-pos-middle-end {
         top: 50%;
@@ -137,9 +161,10 @@
         }
     }
 
-    /// @name k-pos-bottom-start
-    /// @description This is equivalent to `bottom: 0; left: 0;`.
+    /// This is equivalent to `bottom: 0; left: 0;`.
+    /// @name .k-pos-bottom-start
     /// @group position
+    /// @contextType css
     .k-bottom-start,
     .k-pos-bottom-start {
         bottom: 0;
@@ -153,9 +178,10 @@
         }
     }
 
-    /// @name k-pos-bottom-center
-    /// @description This is equivalent to `bottom: 0; left: 50%; translateX(-50%);`.
+    /// This is equivalent to `bottom: 0; left: 50%; translateX(-50%);`.
+    /// @name .k-pos-bottom-center
     /// @group position
+    /// @contextType css
     .k-bottom-center,
     .k-pos-bottom-center {
         bottom: 0;
@@ -163,9 +189,10 @@
         transform: translateX(-50%);
     }
 
-    /// @name k-pos-bottom-end
-    /// @description This is equivalent to `bottom: 0; right: 0;`.
+    /// This is equivalent to `bottom: 0; right: 0;`.
+    /// @name .k-pos-bottom-end
     /// @group position
+    /// @contextType css
     .k-bottom-end,
     .k-pos-bottom-end {
         bottom: 0;
