--- a/packages/default/scss/utils/_spacing.scss
+++ b/packages/default/scss/utils/_spacing.scss
@@ -3,10 +3,6 @@
     // sass-lint:disable-block no-important
     // sass-lint:disable-block indentation
 
-    // @name Available Padding and Margin Values
-    // @description From `0`(0) to `24`(96px or 6rem), `xs`(4px or .25rem), `sm`(8px or .5rem), `md`(12px or .75rem), `lg`(16px or 1rem), `xl`(24px or 1.5rem), `thin`(2px or .125rem), and `hair`(1px or .0625rem). Numeric values examples - `1`(4px or .25rem), `5`(20px or 1.25rem), `10`(40px or 2.5rem), `20`(80px or 5rem).
-    // @group spacing
-
     $utils-margin: (
         m: margin,
         mt: margin-top,
@@ -23,33 +19,47 @@
         pl: padding-left
     ) !default;
 
-    // @name k-m-VALUE
-    // @description This is equivalent to `margin: VALUE;`. Margin area on all four sides of the element.
-    // @group spacing
+    /// This is equivalent to `margin: VALUE;`. Margin area on all four sides of the element.
+    /// @name k-m-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-mt-VALUE
-    // @description This is equivalent to `margin-top: VALUE;`. Margin area on top of the element.
-    // @group spacing
+    /// This is equivalent to `margin-top: VALUE;`. Margin area on top of the element.
+    /// @name k-mt-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-mr-VALUE
-    // @description This is equivalent to `margin-right: VALUE;`. Margin area on right of the element.
-    // @group spacing
+    /// This is equivalent to `margin-right: VALUE;`. Margin area on right of the element.
+    /// @name k-mr-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-mb-VALUE
-    // @description This is equivalent to `margin-bottom: VALUE;`. Margin area on bottom of the element.
-    // @group spacing
+    /// This is equivalent to `margin-bottom: VALUE;`. Margin area on bottom of the element.
+    /// @name k-mb-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-ml-VALUE
-    // @description This is equivalent to `margin-left: VALUE;`. Margin area on left of the element.
-    // @group spacing
+    /// This is equivalent to `margin-left: VALUE;`. Margin area on left of the element.
+    /// @name k-ml-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-mx-VALUE
-    // @description This is equivalent to `margin-left: VALUE; margin-right: VALUE;`. Margin area on left and right of the element.
-    // @group spacing
+    /// This is equivalent to `margin-left: VALUE; margin-right: VALUE;`. Margin area on left and right of the element.
+    /// @name k-mx-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-my-VALUE
-    // @description This is equivalent to `margin-top: VALUE; margin-bottom: VALUE;``. Margin area on top and bottom of the element.
-    // @group spacing
+    /// This is equivalent to `margin-top: VALUE; margin-bottom: VALUE;``. Margin area on top and bottom of the element.
+    /// @name k-my-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
     // Margin
     @each $size, $val in $spacing {
@@ -67,33 +77,47 @@
         }
     }
 
-    // @name k-p-VALUE
-    // @description This is equivalent to `padding: VALUE;`. Padding area on all four sides of the element.
-    // @group spacing
+    /// This is equivalent to `padding: VALUE;`. Padding area on all four sides of the element.
+    /// @name k-p-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-pt-VALUE
-    // @description This is equivalent to `padding-top: VALUE;`. Padding area on top of the element.
-    // @group spacing
+    /// This is equivalent to `padding-top: VALUE;`. Padding area on top of the element.
+    /// @name k-pt-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-pr-VALUE
-    // @description This is equivalent to `padding-right: VALUE;`. Padding area on right of the element.
-    // @group spacing
+    /// This is equivalent to `padding-right: VALUE;`. Padding area on right of the element.
+    /// @name k-pr-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-pb-VALUE
-    // @description This is equivalent to `padding-bottom: VALUE;`. Padding area on bottom of the element.
-    // @group spacing
+    /// This is equivalent to `padding-bottom: VALUE;`. Padding area on bottom of the element.
+    /// @name k-pb-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-pl-VALUE
-    // @description This is equivalent to `padding-left: VALUE;`. Padding area on left of the element.
-    // @group spacing
+    /// This is equivalent to `padding-left: VALUE;`. Padding area on left of the element.
+    /// @name k-pl-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-px-VALUE
-    // @description This is equivalent to `padding-left: VALUE; padding-right: VALUE;`. Padding area on left and right of the element.
-    // @group spacing
+    /// This is equivalent to `padding-left: VALUE; padding-right: VALUE;`. Padding area on left and right of the element.
+    /// @name k-px-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
-    // @name k-py-VALUE
-    // @description This is equivalent to `padding-top: VALUE; padding-bottom: VALUE;``. Padding area on top and bottom of the element.
-    // @group spacing
+    /// This is equivalent to `padding-top: VALUE; padding-bottom: VALUE;``. Padding area on top and bottom of the element.
+    /// @name k-py-VALUE
+    /// @group spacing
+    /// @contextType css
+    _ {}
 
     // Padding
     @each $size, $val in $spacing {
@@ -111,17 +135,17 @@
         }
     }
 
-    // @name k-gap-VALUE
-    // @description This is equivalent to `gap: VALUE;`. Gap area between both rows and columns in grid and flexbox layouts.
-    // @group spacing
+    /// This is equivalent to `gap: VALUE;`. Gap area between both rows and columns in grid and flexbox layouts.
+    /// @name k-gap-VALUE
+    /// @group spacing
 
-    // @name k-gap-x-VALUE
-    // @description This is equivalent to `column-gap: VALUE;`. Gap area between columns in grid and flexbox layouts.
-    // @group spacing
+    /// This is equivalent to `column-gap: VALUE;`. Gap area between columns in grid and flexbox layouts.
+    /// @name k-gap-x-VALUE
+    /// @group spacing
 
-    // @name k-gap-y-VALUE
-    // @description This is equivalent to `row-gap: VALUE;`. Gap area between rows in grid and flexbox layouts.
-    // @group spacing
+    /// This is equivalent to `row-gap: VALUE;`. Gap area between rows in grid and flexbox layouts.
+    /// @name k-gap-y-VALUE
+    /// @group spacing
 
     // Gap
     .k-no-gap { gap: 0 !important; }
