--- a/packages/utils/scss/flex-grid/_flex-basis.scss
+++ b/packages/utils/scss/flex-grid/_flex-basis.scss
@@ -1,13 +1,14 @@
+/// This is equivalent to `flex-basis: auto`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It sizes the element according to its size property.
 /// @name .k-flex-basis-auto
-/// @description This is equivalent to `flex-basis: auto`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It sizes the element according to its size property.
 /// @group flex-basis
+/// @contextType css
 
-// TODO DOCS
-
+/// This is equivalent to `flex-basis: 0`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It disregards the element' size property.
 /// @name .k-flex-basis-0
-/// @description This is equivalent to `flex-basis: 0`. It specifies the initial size of the flex item, before any available space is distributed according to the flex factors. It disregards the element' size property.
 /// @group flex-basis
+/// @contextType css
 
+// Flex basis utility classes
 $kendo-utils-flex-basis: map-get( $kendo-utils, "flex-basis" ) !default;
 
 @include generate-utils( basis, flex-basis, $kendo-utils-flex-basis );
