--- a/packages/utils/scss/flex-grid/_flex-grow.scss
+++ b/packages/utils/scss/flex-grid/_flex-grow.scss
@@ -1,11 +1,14 @@
+/// This is equivalent to `flex-grow: 1`. It defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.
 /// @name .k-flex-grow
-/// @description This is equivalent to `flex-grow: 1`. It defines the ability for a flex item to grow if necessary. It accepts a unitless value that serves as a proportion. It dictates what amount of the available space inside the flex container the item should take up.
 /// @group flex-grow
+/// @contextType css
 
+/// This is equivalent to `flex-grow: 0`. The item will not grow.
 /// @name .k-flex-grow-0
-/// @description This is equivalent to `flex-grow: 0`. The item will not grow.
 /// @group flex-grow
+/// @contextType css
 
+// Flex grow utility classes
 $kendo-utils-flex-grow: map-get( $kendo-utils, "flex-grow" ) !default;
 
 @include generate-utils( grow, flex-grow, $kendo-utils-flex-grow );
