--- a/packages/utils/scss/flex-grid/_flex-shrink.scss
+++ b/packages/utils/scss/flex-grid/_flex-shrink.scss
@@ -1,11 +1,14 @@
+/// This is equivalent to `flex-shrink: 1`. It determines how much the flex item will shrink relative to the rest of the flex items in the flex container when there isn't enough space on the row.
 /// @name .k-flex-shrink
-/// @description This is equivalent to `flex-shrink: 1`. It determines how much the flex item will shrink relative to the rest of the flex items in the flex container when there isn't enough space on the row.
 /// @group flex-shrink
+/// @contextType css
 
+/// This is equivalent to `flex-shrink: 0`. The item will not shrink.
 /// @name .k-flex-shrink-0
-/// @description This is equivalent to `flex-shrink: 0`. The item will not shrink.
 /// @group flex-shrink
+/// @contextType css
 
+// Flex shrink utility classes
 $kendo-utils-flex-shrink: map-get( $kendo-utils, "flex-shrink" ) !default;
 
 @include generate-utils( shrink, flex-shrink, $kendo-utils-flex-shrink );
