--- a/packages/utils/scss/typography/_text-transform.scss
+++ b/packages/utils/scss/typography/_text-transform.scss
@@ -1,17 +1,21 @@
 // TODO DOCS
 
+/// This is equivalent to `text-transform: lowercase;`. Is a keyword that converts all characters to lowercase.
 /// @name k-text-lowercase
-/// @description This is equivalent to `text-transform: lowercase;`. Is a keyword that converts all characters to lowercase.
 /// @group text-transform
+/// @contextType css
 
+/// This is equivalent to `text-transform: uppercase;`. Is a keyword that converts all characters to uppercase.
 /// @name k-text-uppercase
-/// @description This is equivalent to `text-transform: uppercase;`. Is a keyword that converts all characters to uppercase.
 /// @group text-transform
+/// @contextType css
 
+/// This is equivalent to `text-transform: capitalize;`. Is a keyword that converts the first letter of each word to uppercase. Other characters remain unchanged (they retain their original case as written in the element's text).
 /// @name k-text-capitalize
-/// @description This is equivalent to `text-transform: capitalize;`. Is a keyword that converts the first letter of each word to uppercase. Other characters remain unchanged (they retain their original case as written in the element's text).
 /// @group text-transform
+/// @contextType css
 
+// Text transform utility classes
 $kendo-utils-text-transform: map-get( $kendo-utils, "text-transform" ) !default;
 
 @include generate-utils( text, text-transform, $kendo-utils-text-transform );
